{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 10,
  "lineage": "d260f03d-c196-e0b2-c8a5-cf9b2d1d1ed9",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209556818231:vpc/vpc-098ec69ebc0c3b6e0",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-01a94beda44ff601a",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-05fb22a221c941537",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-098ec69ebc0c3b6e0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-080ebb2be00fc3c68",
            "owner_id": "209556818231"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "node_k8s_cp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed6e4425dfb76135",
            "arn": "arn:aws:ec2:us-east-1:209556818231:instance/i-0cd9b7b6041e5532c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cd9b7b6041e5532c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "node-k8s",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01a397dec88fb9b04",
            "private_dns": "ip-172-31-26-66.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.26.66",
            "public_dns": "ec2-3-80-141-107.compute-1.amazonaws.com",
            "public_ip": "3.80.141.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f05e72c5f9c785f3",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_access_node_k8s_cp",
              "allow_ssh_k8s"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08eea8bbbaaba0cfb",
            "tags": {
              "App": "kubernetes",
              "Name": "node00-cp",
              "Role": "control-plane",
              "Version": "1.24"
            },
            "tags_all": {
              "App": "kubernetes",
              "Name": "node00-cp",
              "Role": "control-plane",
              "Version": "1.24"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00539ed26ade66941",
              "sg-0e0be6253930e4067"
            ]
          },
          "dependencies": [
            "aws_key_pair.node_k8s",
            "aws_security_group.allow_access_node_k8s_cp",
            "aws_security_group.allow_access_ssh_k8s",
            "data.aws_ami.node_k8s",
            "data.aws_vpc.default",
            "tls_private_key.ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "node_k8s_wk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed6e4425dfb76135",
            "arn": "arn:aws:ec2:us-east-1:209556818231:instance/i-0a242c09944c4c827",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a242c09944c4c827",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "node-k8s",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06be1a26b6549f594",
            "private_dns": "ip-172-31-25-67.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.25.67",
            "public_dns": "ec2-54-242-16-250.compute-1.amazonaws.com",
            "public_ip": "54.242.16.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b68d4625f387c6e4",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_access_node_k8s_wk",
              "allow_ssh_k8s"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08eea8bbbaaba0cfb",
            "tags": {
              "App": "kubernetes",
              "Name": "node00-wk",
              "Role": "workload",
              "Version": "1.24"
            },
            "tags_all": {
              "App": "kubernetes",
              "Name": "node00-wk",
              "Role": "workload",
              "Version": "1.24"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e0be6253930e4067",
              "sg-0f1e6e6c95f92da46"
            ]
          },
          "dependencies": [
            "aws_key_pair.node_k8s",
            "aws_security_group.allow_access_node_k8s_cp",
            "aws_security_group.allow_access_node_k8s_wk",
            "aws_security_group.allow_access_ssh_k8s",
            "data.aws_ami.node_k8s",
            "data.aws_vpc.default",
            "tls_private_key.ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed6e4425dfb76135",
            "arn": "arn:aws:ec2:us-east-1:209556818231:instance/i-0656d64f30521a1dc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0656d64f30521a1dc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "node-k8s",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09ab55f1c200edd5e",
            "private_dns": "ip-172-31-21-98.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.21.98",
            "public_dns": "ec2-34-201-102-148.compute-1.amazonaws.com",
            "public_ip": "34.201.102.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-098c2348e444a433e",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_access_node_k8s_wk",
              "allow_ssh_k8s"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08eea8bbbaaba0cfb",
            "tags": {
              "App": "kubernetes",
              "Name": "node01-wk",
              "Role": "workload",
              "Version": "1.24"
            },
            "tags_all": {
              "App": "kubernetes",
              "Name": "node01-wk",
              "Role": "workload",
              "Version": "1.24"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e0be6253930e4067",
              "sg-0f1e6e6c95f92da46"
            ]
          },
          "dependencies": [
            "aws_key_pair.node_k8s",
            "aws_security_group.allow_access_node_k8s_cp",
            "aws_security_group.allow_access_node_k8s_wk",
            "aws_security_group.allow_access_ssh_k8s",
            "data.aws_ami.node_k8s",
            "data.aws_vpc.default",
            "tls_private_key.ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_access_node_k8s_cp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209556818231:security-group/sg-00539ed26ade66941",
            "description": "Allow Node Control Plane Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00539ed26ade66941",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Kubernetes API server traffic",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow kube-scheduler inbound",
                "from_port": 10259,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10259
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "etcd server client API",
                "from_port": 2379,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2380
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kube-controller-manager inbound",
                "from_port": 10257,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10257
              },
              {
                "cidr_blocks": [],
                "description": "Allow kubelet API inbound traffic",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10250
              }
            ],
            "name": "allow_access_node_k8s_cp",
            "name_prefix": "",
            "owner_id": "209556818231",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG_node_k8s_cp"
            },
            "tags_all": {
              "Name": "SG_node_k8s_cp"
            },
            "timeouts": null,
            "vpc_id": "vpc-098ec69ebc0c3b6e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_access_node_k8s_wk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209556818231:security-group/sg-0f1e6e6c95f92da46",
            "description": "Allow Node Workload Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f1e6e6c95f92da46",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow kubelet API inbound traffic",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00539ed26ade66941"
                ],
                "self": true,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NodePort Services",
                "from_port": 30000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              }
            ],
            "name": "allow_access_node_k8s_wk",
            "name_prefix": "",
            "owner_id": "209556818231",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG_node_k8s_wk"
            },
            "tags_all": {
              "Name": "SG_node_k8s_wk"
            },
            "timeouts": null,
            "vpc_id": "vpc-098ec69ebc0c3b6e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_access_node_k8s_cp",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_access_ssh_k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209556818231:security-group/sg-0e0be6253930e4067",
            "description": "K8S Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0be6253930e4067",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_k8s",
            "name_prefix": "",
            "owner_id": "209556818231",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-098ec69ebc0c3b6e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}